--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -15,7 +15,7 @@ spec:
         app: app1
     spec:
       containers:
-      - name: nginx
+      - name: app1
         image: soumya081693/app1:1.0.0
         ports:
         - containerPort: 80
@@ -35,7 +35,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: minimal-ingress
+  name: app1
   annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip 
